Adding modeling bit heehee

--- a/ugc.html
+++ b/ugc.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>UGC with Lisa</title>
   
-<!-- Favicons -->
 <!-- UGC Favicons -->
 <link rel="icon" href="/images/favicon-ugc.ico" sizes="any">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-ugc-32.png">
@@ -90,14 +89,6 @@
       <p class="ugc-hero-blurb">
         UGC creator and strategist with 5+ years of content creation experience.
       </p>
-
-      <!-- Email (hero contact line) -->
-      <!-- <div class="ugc-hero-email">
-       <!--  📧
-        <!-- <a href="mailto:lisa@ugcwithlisaeshunwilson.com">
-          lisa@ugcwithlisaeshunwilson.com -->
-        </a> -->
-      </div> --> 
 
       <div class="ugc-social-icons">
         <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
@@ -274,7 +265,7 @@
     ✅ UGC Mastery Academy Pro Certified | Trained in performance-driven content generation systems and testing.
     </p>
     <p>
-    ✅ Acting & On-Camera Training | Studied script reading, presence, and performance.</p>
+    ✅ Acting & Modeling | Script reads, strong delivery, and energetic performance for UGC. </p>
     <p>
     ✅ Results-driven & Focused | Boost engagement for short or long-form content.</p>
     <p>
