UGC video section title change ugc example videos

--- a/ugc.html
+++ b/ugc.html
@@ -152,7 +152,7 @@
 <!-- =================== UGC Video Section 1 Niche 1 =================== -->
 <section class="ugc-videos card" aria-label="UGC video examples">
   <div class="ig-head">
-    <h3>ugc videos</h3>
+    <h3>ugc example videos</h3>
     <a class="btn btn-pill btn-outline"
        href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry"
        target="_blank" rel="noopener">
@@ -208,7 +208,7 @@
 <!-- =================== UGC Video Section 2 Niche 2 =================== -->
 <section class="ugc-videos card" aria-label="UGC video examples">
   <div class="ig-head">
-    <h3>ugc videos</h3>
+    <h3>ugc example videos</h3>
     <a class="btn btn-pill btn-outline"
        href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry"
        target="_blank" rel="noopener">
