ugc reel titles

--- a/ugc.html
+++ b/ugc.html
@@ -166,6 +166,8 @@
     <div class="ugc-track">
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 1">
+<!-- NEW: video type (top pill) -->
+      <div class="ugc-type">Skit</div>
         <video class="ugc-reel-video"
                src="videos/ugc-cadence.mp4"
                poster="images/ugc-cadence-poster.jpg"
@@ -173,11 +175,12 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">skit | Cadence</div>
+        <div class="ugc-pill">Cadence Capsules</div>
       </div>
 
       <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 2">
+        <div class="ugc-type">Product Demo</div>
         <video class="ugc-reel-video"
                src="videos/ugc-crest.mp4"
                poster="images/ugc-crest-poster.jpg"
@@ -185,11 +188,12 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">product demo | Crest</div>
+        <div class="ugc-pill">Crest Whitening Strips</div>
       </div>
 
       <!-- Video 3 -->
-      <div class="ugc-reel" aria-label="UGC video 4">
+      <div class="ugc-reel" aria-label="UGC video 3">
+        <div class="ugc-type">Broll w/VO</div>
         <video class="ugc-reel-video"
                src="videos/ugc-alo.mp4"
                poster="images/ugc-alo-poster.jpg"
@@ -197,7 +201,7 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">broll w/VO | Alo</div>
+        <div class="ugc-pill">Alo Airlift Matching Set</div>
       </div>
     </div> <!-- /.ugc-track -->
   </div> <!-- /.ugc-wrap -->
@@ -222,6 +226,7 @@
     <div class="ugc-track">
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 4">
+        <div class="ugc-type">Testimonial</div>
         <video class="ugc-reel-video"
                src="videos/ugc-lipbutter.mp4"
                poster="images/ugc-lipbutter-poster.jpg"
@@ -229,11 +234,12 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">testimonial | Rich Lips</div>
+        <div class="ugc-pill">Rich Lips Lip Butter</div>
       </div>
 
       <!-- Video 2 -->
       <div class="ugc-reel" aria-label="UGC video 5">
+        <div class="ugc-type">Greenscreen</div>
         <video class="ugc-reel-video"
                src="videos/ugc-sprout.mp4"
                poster="images/ugc-prepAI-sprout-poster.jpg"
@@ -241,7 +247,7 @@
                muted
                controls
                preload="metadata"></video>
-        <div class="ugc-pill">greenscreen | Sprout</div>
+        <div class="ugc-pill">Sprout App</div>
       </div>
     </div>
 
