black bill overlay UGC reels

--- a/ugc.html
+++ b/ugc.html
@@ -167,7 +167,7 @@
       <!-- Video 1 -->
       <div class="ugc-reel" aria-label="UGC video 1">
 <!-- NEW: video type (top pill) -->
-      <div class="ugc-type">Skit</div>
+      <div class="ugc-type">Skit Style</div>
         <video class="ugc-reel-video"
                src="videos/ugc-cadence.mp4"
                poster="images/ugc-cadence-poster.jpg"
