--- a/ugc.html
+++ b/ugc.html
@@ -357,7 +357,7 @@
       <p>🧘🏽‍♀️<strong>Yoga Creator</strong> | Yoga Alliance Certified | 200-hour</p>
       <p>👧🏽👧🏾<strong>Big Sister Creator</strong> | Oldest of 6 siblings | Extra UGC Models!</p>
       <p>🏆Triathlete, 🎿Skiier, 🧗🏽‍♀️Climber, & 🏕️Backcountry Hiker</p>
-      <p>🌎<strong></strong>Globetrotter</p>strong> | I visit family in Norway and Czechia annually!</p>
+      <p>🌎<strong>Globetrotter</p>strong> | I visit family in Norway and Czechia annually!</p>
       <p>📩 lisa@ugcwithlisaeshunwilson.com</p>
     <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">WORK WITH ME</a>
   </div>
