Change Main page buttons

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a class="btn btn-dark btn-pill" href="yoga-inperson.html">FULL SCHEDULE</a>
       <a class="btn btn-dark btn-pill btn-wide"
      href="signin.html">
-     ACCESS ONLINE CONTENT
+     ACCESS ONLINE CONTENT LIBRARY
      </a>
    </div>
     </div>
