--- a/index.html
+++ b/index.html
@@ -70,8 +70,36 @@
      ACCESS ONLINE CONTENT LIBRARY
      </a>
    </div>
+
+
+<!-- Social Media Icons -->
+    <div class="hero-social-icons">
+      <a href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry"
+         class="icon-btn">
+        <img src="images/icons/email.svg" alt="Email">
+      </a>
+
+      <a href="https://x.com/yogawithlisaai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/x-twitter.svg" alt="Twitter / X">
+      </a>
+
+      <a href="https://www.instagram.com/yogawithlisaai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/instagram.svg" alt="Instagram">
+      </a>
+
+      <a href="https://www.tiktok.com/@yogawithlisai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/tiktok.svg" alt="TikTok">
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Minimal Intro -->
   <section class="intro container">
