--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <!-- Card 8 -->
     <article class="card">
-      <a class="card-link" href="www.ugcwithlisaeshunwilson.com">
+      <a class="card-link" href="https://www.ugcwithlisaeshunwilson.com">
         <img class="card-img img-default" src="images/UGC-default.jpg" alt="UGC">
         <img class="card-img img-hover"   src="images/UGC-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>UGC</span></div>
