Social Media link update

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a class="btn btn-dark btn-pill" href="yoga-inperson.html">FULL SCHEDULE</a>
       <a class="btn btn-dark btn-pill btn-wide"
      href="signin.html">
-     ACCESS ONLINE CONTENT LIBRARY
+     CONTENT LIBRARY
      </a>
    </div>
 
@@ -85,13 +85,13 @@
         <img src="images/icons/x-twitter.svg" alt="Twitter / X">
       </a>
 
-      <a href="https://www.instagram.com/yogawithlisaai"
+      <a href="https://www.instagram.com/yogawithlisa.ai"
          target="_blank" rel="noopener"
          class="icon-btn">
         <img src="images/icons/instagram.svg" alt="Instagram">
       </a>
 
-      <a href="https://www.tiktok.com/@yogawithlisai"
+      <a href="https://www.tiktok.com/@yogawithlisa.ai"
          target="_blank" rel="noopener"
          class="icon-btn">
         <img src="images/icons/tiktok.svg" alt="TikTok">
