Connect with me at the bottom of page

--- a/index.html
+++ b/index.html
@@ -299,6 +299,50 @@
   </div>
 </section>
 
+<!-- ==================== Connect ==================== -->
+<section class="ugc-connect" aria-label="Connect with Lisa">
+  <h2 class="ugc-connect-title">CONNECT WITH LISA</h2>
+
+  <div class="ugc-connect-card">
+    <!-- Consider swapping to a yoga-specific image if you want later -->
+    <img class="ugc-connect-photo"
+         src="images/connect-lisa.jpg"
+         alt="Lisa Eshun-Wilson, Yoga with Lisa">
+  </div>
+
+  <div class="ugc-connect-icons">
+
+    <a href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry"
+       class="ugc-connect-icon">
+      <img src="images/icons/email.svg" alt="Email">
+    </a>
+
+    <a href="https://x.com/yogawithlisaai"
+       target="_blank" rel="noopener"
+       class="ugc-connect-icon">
+      <img src="images/icons/x-twitter.svg" alt="Twitter / X">
+    </a>
+
+    <a href="https://www.instagram.com/yogawithlisa.ai"
+       target="_blank" rel="noopener"
+       class="ugc-connect-icon">
+      <img src="images/icons/instagram.svg" alt="Instagram">
+    </a>
+
+    <a href="https://www.tiktok.com/@yogawithlisa.ai"
+       target="_blank" rel="noopener"
+       class="ugc-connect-icon">
+      <img src="images/icons/tiktok.svg" alt="TikTok">
+    </a>
+
+  </div>
+
+  <a class="ugc-connect-email"
+     href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry">
+    LISA@YOGAWITHLISA.AI
+  </a>
+</section>
+
   <footer class="site-footer">
     <div class="container">
       <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
