Connect with me at the bottom of page update style

--- a/index.html
+++ b/index.html
@@ -299,48 +299,54 @@
   </div>
 </section>
 
-<!-- ==================== Connect ==================== -->
-<section class="ugc-connect" aria-label="Connect with Lisa">
-  <h2 class="ugc-connect-title">CONNECT WITH LISA</h2>
+<!-- ==================== Connect Banner ==================== -->
+<section class="connect-banner" aria-label="Connect with Lisa">
+  <div class="connect-banner__media" aria-hidden="true"
+       style="background-image:url('images/connect-lisa.jpg');"></div>
+  <div class="connect-banner__overlay" aria-hidden="true"></div>
 
-  <div class="ugc-connect-card">
-    <!-- Consider swapping to a yoga-specific image if you want later -->
-    <img class="ugc-connect-photo"
-         src="images/connect-lisa.jpg"
-         alt="Lisa Eshun-Wilson, Yoga with Lisa">
+  <div class="connect-banner__inner">
+    <h2 class="connect-banner__title">connect with me</h2>
+
+    <p class="connect-banner__text">
+      Want to practice together, collaborate, or ask a question? I’d love to hear from you.
+    </p>
+
+    <div class="connect-banner__actions">
+      <a class="btn btn-dark btn-pill"
+         href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry">
+        EMAIL ME
+      </a>
+
+      <!-- Social icons -->
+      <div class="connect-banner__icons" aria-label="Social links">
+        <a href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry"
+           class="icon-btn" aria-label="Email Lisa">
+          <img src="images/icons/email.svg" alt="">
+        </a>
+
+        <a href="https://x.com/yogawithlisaai" target="_blank" rel="noopener"
+           class="icon-btn" aria-label="X / Twitter">
+          <img src="images/icons/x-twitter.svg" alt="">
+        </a>
+
+        <a href="https://www.instagram.com/yogawithlisa.ai" target="_blank" rel="noopener"
+           class="icon-btn" aria-label="Instagram">
+          <img src="images/icons/instagram.svg" alt="">
+        </a>
+
+        <a href="https://www.tiktok.com/@yogawithlisa.ai" target="_blank" rel="noopener"
+           class="icon-btn" aria-label="TikTok">
+          <img src="images/icons/tiktok.svg" alt="">
+        </a>
+      </div>
+    </div>
+
+    <a class="connect-banner__email"
+       href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry">
+      lisa@yogawithlisa.ai
+    </a>
   </div>
-
-  <div class="ugc-connect-icons">
-
-    <a href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry"
-       class="ugc-connect-icon">
-      <img src="images/icons/email.svg" alt="Email">
-    </a>
-
-    <a href="https://x.com/yogawithlisaai"
-       target="_blank" rel="noopener"
-       class="ugc-connect-icon">
-      <img src="images/icons/x-twitter.svg" alt="Twitter / X">
-    </a>
-
-    <a href="https://www.instagram.com/yogawithlisa.ai"
-       target="_blank" rel="noopener"
-       class="ugc-connect-icon">
-      <img src="images/icons/instagram.svg" alt="Instagram">
-    </a>
-
-    <a href="https://www.tiktok.com/@yogawithlisa.ai"
-       target="_blank" rel="noopener"
-       class="ugc-connect-icon">
-      <img src="images/icons/tiktok.svg" alt="TikTok">
-    </a>
-
-  </div>
-
-  <a class="ugc-connect-email"
-     href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry">
-    LISA@YOGAWITHLISA.AI
-  </a>
 </section>
 
   <footer class="site-footer">
