Fix Connect section at the end of the page

--- a/index.html
+++ b/index.html
@@ -309,14 +309,8 @@
     <h2 class="connect-banner__title">connect with me</h2>
 
     <p class="connect-banner__text">
-      Want to practice together, collaborate, or ask a question? I’d love to hear from you.
+      I’d love to hear from you.
     </p>
-
-    <div class="connect-banner__actions">
-      <a class="btn btn-dark btn-pill"
-         href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry">
-        EMAIL ME
-      </a>
 
       <!-- Social icons -->
       <div class="connect-banner__icons" aria-label="Social links">
@@ -339,6 +333,13 @@
            class="icon-btn" aria-label="TikTok">
           <img src="images/icons/tiktok.svg" alt="">
         </a>
+        <div class="connect-banner__actions">
+
+      <a class="btn btn-dark btn-pill"
+         href="signin.html">
+        JOIN OUR NEWSLETTER
+      </a>
+
       </div>
     </div>
 
