Connect width + Testimonials Banner

--- a/index.html
+++ b/index.html
@@ -286,6 +286,45 @@
   </div>
 </section>
 
+<!-- ==================== Testimonials ==================== -->
+<section class="testimonials-banner" aria-label="Testimonials">
+
+  <div class="testimonials-inner">
+    <h2 class="testimonials-title">kind words from studio partners</h2>
+
+    <div class="testimonials-grid">
+
+      <!-- Testimonial Card 1 -->
+      <article class="testimonial-card">
+        <div class="testimonial-stars">
+          ★★★★★
+        </div>
+        <p class="testimonial-text">
+          “Review.”
+        </p>
+        <p class="testimonial-author">
+          — Sandy Jones, Founder, Beach Glass Hot Yoga & Pilates, Noe Valley, San Francisco, CA 
+        </p>
+      </article>
+
+      <!-- Testimonial Card 2 -->
+      <article class="testimonial-card">
+        <div class="testimonial-stars">
+          ★★★★★
+        </div>
+        <p class="testimonial-text">
+          “Lisa taught Yoga classes at a recent 4 day silent meditation retreat at Urban Adamah. Working with her was an absolute pleasure. She was positive, organized, and responsive in the lead up to the retreat, and she was able to tailor her teachings to the needs of our retreat and its participants with ease. I highly recommend working with her.”
+        </p>
+        <p class="testimonial-author">
+          — Tyler Sinclair, Director of Retreats and Celebrations, Urban Adamah, Berkeley, CA 
+        </p>
+      </article>
+
+    </div>
+  </div>
+
+</section>
+
 <!-- =================== Founder Banner =================== -->
 <section class="founder message" aria-label="Our founder">
   <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
@@ -309,7 +348,7 @@
     <h2 class="connect-banner__title">connect with me</h2>
 
     <p class="connect-banner__text">
-      I’d love to hear from you.
+      A good leader knows <em>when to follow.</em> 
     </p>
 
       <!-- Social icons -->
