Add Sandy Testimonial - Placeholder for Now

--- a/index.html
+++ b/index.html
@@ -286,11 +286,24 @@
   </div>
 </section>
 
+<!-- =================== Founder Banner =================== -->
+<section class="founder message" aria-label="Our founder">
+  <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
+  <div class="founder-overlay"></div>
+  <div class="founder-inner container">
+    <h2>meet the founder</h2>
+    <p>
+      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for science, health, and longevity inspired her to not only <em>practice</em> yoga but also to, ultimately, <em>teach</em> and build community around this transformative practice. Her mission? Design tools and systems that motivate you to practice consistently and unlock your full potential.
+    </p>
+    <a class="btn btn-pill btn-outline" href="founder.html">LISA THE YOGI</a>
+  </div>
+</section>
+
 <!-- ==================== Testimonials ==================== -->
 <section class="testimonials-banner" aria-label="Testimonials">
 
   <div class="testimonials-inner">
-    <h2 class="testimonials-title">kind words from studio partners</h2>
+    <h2 class="testimonials-title">partner testimonials</h2>
 
     <div class="testimonials-grid">
 
@@ -323,19 +336,6 @@
     </div>
   </div>
 
-</section>
-
-<!-- =================== Founder Banner =================== -->
-<section class="founder message" aria-label="Our founder">
-  <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
-  <div class="founder-overlay"></div>
-  <div class="founder-inner container">
-    <h2>meet the founder</h2>
-    <p>
-      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for science, health, and longevity inspired her to not only <em>practice</em> yoga but also to, ultimately, <em>teach</em> and build community around this transformative practice. Her mission? Design tools and systems that motivate you to practice consistently and unlock your full potential.
-    </p>
-    <a class="btn btn-pill btn-outline" href="founder.html">LISA THE YOGI</a>
-  </div>
 </section>
 
 <!-- ==================== Connect Banner ==================== -->
