--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="login.html" class="login-btn">LOGIN</a></li>
+          <li><a href="login.html" class="login-btn">SIGN IN</a></li>
         </ul>
       </nav>
     </div>
