--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
       <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="login.html" class="login-btn">SIGN IN</a></li>
+        
+       <!-- Secondary -->
+        <li>
+          <a href="login.html" class="nav-link nav-login">
+            SIGN IN
+          </a>
+        </li>
+
+        <!-- Neutral / informational -->
+        <li>
+          <a href="corporate.html" class="nav-link nav-corporate">
+            CORPORATE
+          </a>
+        </li>
+
+        <!-- Primary CTA -->
+        <li>
+          <a href="signin.html" class="nav-btn nav-primary">
+            START FREE TRIAL
+          </a>
+        </li>
+
         </ul>
       </nav>
     </div>
