CTA Button Name Changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Primary CTA -->
         <li>
           <a href="signin.html" class="nav-btn nav-primary">
-            START FREE TRIAL
+            SUBSCRIBE
           </a>
         </li>
 
