--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -165,7 +165,7 @@
       <a class="brand" href="index.html">yoga with lisa</a>
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="login.html" class="login-btn">LOGIN</a></li>
+          <li><a href="login.html" class="login-btn">SIGN IN</a></li>
         </ul>
       </nav>
     </div>
@@ -182,7 +182,7 @@
         <span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
       </h1>
       <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
+        <a class="btn btn-dark btn-pill" href="login.html">FOLLOW OUR NEWSLETTER</a>
         <a class="btn btn-dark btn-pill btn-wide"
            href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
            target="_blank" rel="noopener">
@@ -233,6 +233,7 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
+	  <a href="#jan30" class="date-pill">Jan 30</a>
 	  <a href="#jan23" class="date-pill">Jan 23</a>
 	  <a href="#jan16" class="date-pill">Jan 16</a>
 	  <a href="#jan9" class="date-pill">Jan 9</a>
@@ -267,6 +268,23 @@
           </tr>
         </thead>
         <tbody>
+
+          <!-- Jan 30 -->
+          <tr id="jan30">
+            <td class="schedule-date">Friday, Jan 30th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
 
           <!-- Jan 23 -->
           <tr id="jan23">
