--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- Primary CTA -->
         <li>
-          <a href="signin.html" class="nav-btn nav-primary">
+          <a href="viewplans.html" class="nav-btn nav-primary">
             SUBSCRIBE
           </a>
         </li>
@@ -261,7 +261,7 @@
     <p>
       <strong>Monthly pricing: $16.99 USD | Yearly pricing $169.99</strong><em>(2 Months Free!)</em>  
     </p>
-    <a class="btn btn-pill btn-outline" href="login.html">SUBSCRIBE NOW</a>
+    <a class="btn btn-pill btn-outline" href="viewplans.html">SUBSCRIBE NOW</a>
   </div>
 </section>
 
