--- a/signin.html
+++ b/signin.html
@@ -144,7 +144,7 @@
         </p>
         <p>
           Not a member yet?
-          <a href="login.html">View plans & join</a>.
+          <a href="viewplans.html">View plans & join</a>.
         </p>
       </div>
 
