Update view plans page

--- a/viewplans.html
+++ b/viewplans.html
@@ -13,8 +13,8 @@
       --muted: rgba(0,0,0,0.62);
       --border: rgba(0,0,0,0.10);
 
-      --purple-bg: #eef0ff;       /* soft lavender */
-      --yellow-bg: #fbf1da;       /* warm sand */
+      --cream-bg: #FBF8F4;       /* cream */
+      --mocha-bg: #8B6A58;       /* mocha */
       --shadow: 0 22px 50px rgba(0,0,0,0.10);
 
       --radius-lg: 26px;
@@ -319,10 +319,10 @@
     <div class="shell">
 
       <div class="topbar">
-        <a class="brand" href="index.html">yoga with lisa</a>
+        <a class="brand" href="index.html"></a>
         <div class="toplinks">
-          <a href="login.html">Sign in</a>
-          <a href="index.html">Back to Home</a>
+          <a href="login.html"></a>
+          <a href="index.html"></a>
         </div>
       </div>
 
@@ -330,7 +330,7 @@
 
         <div class="header">
           <div class="eyebrow">Pricing</div>
-          <h1>Simple &amp; transparent membership</h1>
+          <h1>Join Yoga with Lisa On-Demand Today</h1>
           <p class="sub">
             Choose a plan that fits your lifestyle. Your membership unlocks the on-demand library,
             monthly drops, and guided programs designed to help you practice consistently and feel your best.
