Update view plan, plan background

--- a/viewplans.html
+++ b/viewplans.html
@@ -13,8 +13,8 @@
       --muted: rgba(0,0,0,0.62);
       --border: rgba(0,0,0,0.10);
 
-      --cream-bg: #FBF8F4;       /* cream */
-      --mocha-bg: #8B6A58;       /* mocha */
+      --purple-bg: #FBF8F4;       /* cream */
+      --yellow-bg: #8B6A58;       /* mocha */
       --shadow: 0 22px 50px rgba(0,0,0,0.10);
 
       --radius-lg: 26px;
@@ -330,7 +330,7 @@
 
         <div class="header">
           <div class="eyebrow">Pricing</div>
-          <h1>Join Yoga with Lisa On-Demand Today</h1>
+          <h1>Join Yoga with Lisa On-Demand</h1>
           <p class="sub">
             Choose a plan that fits your lifestyle. Your membership unlocks the on-demand library,
             monthly drops, and guided programs designed to help you practice consistently and feel your best.
