Update view plan page title and description

--- a/viewplans.html
+++ b/viewplans.html
@@ -330,10 +330,9 @@
 
         <div class="header">
           <div class="eyebrow">Pricing</div>
-          <h1>Join Yoga with Lisa On-Demand</h1>
+          <h1>Your dream body awaits.</h1>
           <p class="sub">
-            Choose a plan that fits your lifestyle. Your membership unlocks the on-demand library,
-            monthly drops, and guided programs designed to help you practice consistently and feel your best.
+            Not just classes — a guided practice designed with you, for you.
           </p>
         </div>
 
