--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -233,7 +233,13 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
-	  <a href="#jan30" class="date-pill">Jan 30</a>
+	  <a href="#feb12" class="date-pill">Feb 12</a>
+	  <a href="#feb10" class="date-pill">Feb 10</a>
+	  <a href="#feb5" class="date-pill">Feb 5</a>
+          <a href="#feb3" class="date-pill">Feb 3</a>
+          <a href="#jan30" class="date-pill">Jan 30</a>
+          <a href="#jan29" class="date-pill">Jan 29</a>
+          <a href="#jan27" class="date-pill">Jan 27</a>
 	  <a href="#jan23" class="date-pill">Jan 23</a>
 	  <a href="#jan16" class="date-pill">Jan 16</a>
 	  <a href="#jan9" class="date-pill">Jan 9</a>
@@ -269,6 +275,74 @@
         </thead>
         <tbody>
 
+<!-- Feb 12 -->
+<tr id="feb12">
+  <td class="schedule-date">Thursday, Feb 12th</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sports Basement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
+
+<!-- Feb 10 -->
+<tr id="feb10">
+  <td class="schedule-date">Tuesday, Feb 10th</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sports Basement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
+
+<!-- Feb 5 -->
+<tr id="feb5">
+  <td class="schedule-date">Thursday, Feb 5th</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sports Basement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
+
+<!-- Feb 3 -->
+<tr id="feb3">
+  <td class="schedule-date">Tuesday, Feb 3rd</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sports Basement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
+
           <!-- Jan 30 -->
           <tr id="jan30">
             <td class="schedule-date">Friday, Jan 30th</td>
@@ -286,6 +360,39 @@
             </td>
           </tr>
 
+<!-- Jan 29 -->
+<tr id="jan29">
+  <td class="schedule-date">Thursday, Jan 29th</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sportsbasement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
+
+	  <!-- Jan 27 -->
+<tr id="jan27">
+  <td class="schedule-date">Tuesday, Jan 27th</td>
+  <td class="schedule-time">12:00 PM</td>
+  <td class="schedule-duration">60 min</td>
+  <td class="schedule-class">Power Vinyasa Flow</td>
+  <td class="schedule-instructor">Lisa</td>
+  <td class="schedule-location">Sportsbasement Berkeley</td>
+  <td class="schedule-cta">
+    <a class="btn btn-dark btn-pill schedule-btn"
+       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+       target="_blank" rel="noopener">
+      join
+    </a>
+  </td>
+</tr>
           <!-- Jan 23 -->
           <tr id="jan23">
             <td class="schedule-date">Friday, Jan 23rd</td>
