Update schedule with Beach Glass Dates

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -233,8 +233,10 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
+	  <a href="#feb13" class="date-pill">Feb 13</a>
 	  <a href="#feb12" class="date-pill">Feb 12</a>
 	  <a href="#feb10" class="date-pill">Feb 10</a>
+	  <a href="#feb6" class="date-pill">Feb 6</a>
 	  <a href="#feb5" class="date-pill">Feb 5</a>
           <a href="#feb3" class="date-pill">Feb 3</a>
           <a href="#jan30" class="date-pill">Jan 30</a>
@@ -275,16 +277,34 @@
         </thead>
         <tbody>
 
-<!-- Feb 12 -->
-<tr id="feb12">
-  <td class="schedule-date">Thursday, Feb 12th</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sports Basement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
+	<!-- Feb 13 -->
+          <tr id="feb13">
+            <td class="schedule-date">Friday, Feb 13th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+
+	<!-- Feb 12 -->
+	<tr id="feb12">
+  	<td class="schedule-date">Thursday, Feb 12th</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sports Basement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
        href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
@@ -292,16 +312,16 @@
   </td>
 </tr>
 
-<!-- Feb 10 -->
-<tr id="feb10">
-  <td class="schedule-date">Tuesday, Feb 10th</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sports Basement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
+	<!-- Feb 10 -->
+	<tr id="feb10">
+  	<td class="schedule-date">Tuesday, Feb 10th</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sports Basement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
        href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
@@ -309,34 +329,52 @@
   </td>
 </tr>
 
-<!-- Feb 5 -->
-<tr id="feb5">
-  <td class="schedule-date">Thursday, Feb 5th</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sports Basement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
-       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+	  <!-- Feb 6 -->
+          <tr id="feb6">
+            <td class="schedule-date">Friday, Feb 6th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+
+	<!-- Feb 5 -->
+	<tr id="feb5">
+  	<td class="schedule-date">Thursday, Feb 5th</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sports Basement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
+       	href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
     </a>
   </td>
 </tr>
 
-<!-- Feb 3 -->
-<tr id="feb3">
-  <td class="schedule-date">Tuesday, Feb 3rd</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sports Basement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
-       href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
+	<!-- Feb 3 -->
+	<tr id="feb3">
+  	<td class="schedule-date">Tuesday, Feb 3rd</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sports Basement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
+       	href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
     </a>
@@ -360,16 +398,16 @@
             </td>
           </tr>
 
-<!-- Jan 29 -->
-<tr id="jan29">
-  <td class="schedule-date">Thursday, Jan 29th</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sportsbasement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
+	<!-- Jan 29 -->
+	<tr id="jan29">
+  	<td class="schedule-date">Thursday, Jan 29th</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sportsbasement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
        href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
@@ -378,15 +416,15 @@
 </tr>
 
 	  <!-- Jan 27 -->
-<tr id="jan27">
-  <td class="schedule-date">Tuesday, Jan 27th</td>
-  <td class="schedule-time">12:00 PM</td>
-  <td class="schedule-duration">60 min</td>
-  <td class="schedule-class">Power Vinyasa Flow</td>
-  <td class="schedule-instructor">Lisa</td>
-  <td class="schedule-location">Sportsbasement Berkeley</td>
-  <td class="schedule-cta">
-    <a class="btn btn-dark btn-pill schedule-btn"
+	<tr id="jan27">
+  	<td class="schedule-date">Tuesday, Jan 27th</td>
+  	<td class="schedule-time">12:00 PM</td>
+  	<td class="schedule-duration">60 min</td>
+  	<td class="schedule-class">Power Vinyasa Flow</td>
+  	<td class="schedule-instructor">Lisa</td>
+  	<td class="schedule-location">Sportsbasement Berkeley</td>
+  	<td class="schedule-cta">
+    	<a class="btn btn-dark btn-pill schedule-btn"
        href="https://shop.sportsbasement.com/blogs/community-spaces/community-room-1?srsltid=AfmBOop6RwgBJOVRhL-YJSWCV4j3HMgC6K4FyqqtrUtuEIL3VxScBP44"
        target="_blank" rel="noopener">
       join
