--- a/corporate.html
+++ b/corporate.html
@@ -146,8 +146,8 @@
             <li>Onboarding kit & comms templates</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
+            <a class="btn btn-dark btn-pill" href="corporate-packages.html">VIEW PACKAGES</a>
+            <a class="btn btn-pill btn-outline" href="login.html">WORK WITH ME</a>
           </div>
         </div>
       </article>
@@ -167,8 +167,8 @@
             <li>Fast setup for departments & orgs</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">STUDENT DISCOUNT</a>
+            <a class="btn btn-dark btn-pill" href=student-packages.html">VIEW PACKAGES</a>
+            <a class="btn btn-pill btn-outline" href="login.html">WORK WITH ME</a>
           </div>
         </div>
       </article>
